Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28765

Class symbols dropdown not shown in "narrow" editor toolbar

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 10.0.1
    • Qt Creator 9.0.1, Qt Creator 9.0.2
    • Editors
    • None
    • MacOS Monterey (12.6), Apple Silicon M1
    • macOS
    • 7046890bc (10.0)

    Description

      On the editing toolbar, it needs to be a certain width before the symbols dropdown appears. This minimum width is quite large (unreasonably large). This was not an issue with earlier versions of Qt Creator.

      Given I use an 1080HD monitor and sit two panels side by side, mostly at least one panel is suffering this bug.

      I have attached screenshots that show the widths either side of the thresholds.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davschul David Schulz
            paulmasri Paul
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes